--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.109.2"
 uvicorn = {extras = ["standard"], version = "^0.27.1"}
 boto3 = "^1.34.39"
 sentence-transformers = "^2.3.1"
+opensearch-py = "^2.4.2"
 
 
 [build-system]
