--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ uvicorn = {extras = ["standard"], version = "^0.27.1"}
 boto3 = "^1.34.39"
 sentence-transformers = "^2.3.1"
 opensearch-py = "^2.4.2"
+torch = "^2.2.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
