--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sentence-transformers = "^2.3.1"
 opensearch-py = "^2.4.2"
 torch = "^2.2.0"
 python-dotenv = "^1.0.1"
+faiss-cpu = "^1.7.4"
 
 
 [build-system]
