--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.109.2"
 uvicorn = {extras = ["standard"], version = "^0.27.1"}
 opensearch-py = "^2.4.2"
 python-dotenv = "^1.0.1"
+pandas = "^2.2.2"
 
 
 [build-system]
